Revert "remove all capitals in title, move links from top header to about CRC, increase menu width to prevent line breaks in drop down items"
This reverts commit ff85c7ccbfc19291ece55517df324751b0976bae.

--- a/css/menu.css
+++ b/css/menu.css
@@ -33,7 +33,6 @@ ul.menu {
 ul.menu li {
 	font: 12px arial, helvetica, sans-serif;
 	padding-left: 10px;
-	width: 180px;
 }
 a.menuLink, li a {
 	text-decoration: none;
